@@ -7,6 +7,8 @@ Broker:
   assertions removed. Closes #2708.
 - Fix default settings incorrectly allowing TLS v1.1. Closes #2722.
 - Use line buffered mode for stdout. Closes #2354. Closes #2749.
+- Fix bridges with non-matching cleansession/local_cleansession being expired
+  on start after restoring from persistence. Closes #2634.
 - Fix connections being limited to 2048 on Windows. The limit is now 8192,
   where supported. Closes #2732.
 
